added scss files & constructor init

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "parcel *.html --open --port 4200 --no-cache",
+    "build": "parcel build *.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "parcel": "^1.12.4",
+    "sass": "^1.23.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4"
   },
