add ChatPage, add ChatApp, add components (header, footer, login)

--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "Stanislav Termosa <termosa.stanislav@gmail.com> (https://me.st/)",
   "license": "MIT",
   "dependencies": {
+    "assemble": "^0.3.83",
+    "grunt": "^0.4.5",
     "parcel": "^1.12.4",
+    "styles": "^0.2.1",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
+    "sass": "^1.23.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
