Added sass on project

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "parcel": "^1.12.4",
+    "sass": "^1.23.3",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4"
   },
