--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "parcel": "^1.12.4",
     "vue": "^2.6.10",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
