--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html --open",
+    "build": "rimraf docs && parcel build index.html -d docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "parcel": "^1.12.4",
+    "rimraf": "^3.0.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4"
   },
