--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "rimraf docs && parcel build index.html -d docs",
+    "build": "rimraf docs && parcel build index.html --out-dir docs --public-url .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
